--- a/src/components/CallButton/CallButton.module.scss
+++ b/src/components/CallButton/CallButton.module.scss
@@ -21,7 +21,7 @@
     .wrapper-mobile {
         position: fixed;
         bottom: 5px;
-        right: 15px;
+        left: 15px;
         z-index: 100;
     }
 }
